--- a/css/style.scss
+++ b/css/style.scss
@@ -84,22 +84,35 @@ header {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	.text {
-		color: white;
-		font-size: 40px;
-		font-weight: bold;
-		h1 {
-			margin: 0;
+	.particles {
+		width: 100%;
+		height: 100%;
+		background-image: url('');
+		background-size: cover;
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+		postition: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		.text {
+			color: white;
+			font-size: 40px;
+			font-weight: bold;
+			position: absolute;
+			h1 {
+				margin: 0;
+			}
 		}
-	}
-	.button-technology {
-		background-color: $white_color;
-		color: $green_color;
-		&:hover {
-			background-color: black;
-			color: $white_color;
-			transition: .8s;
-			box-shadow: none;
+		.button-technology {
+			background-color: $white_color;
+			color: $green_color;
+			&:hover {
+				background-color: black;
+				color: $white_color;
+				transition: .8s;
+				box-shadow: none;
+			}
 		}
 	}
 }
