--- a/css/style.scss
+++ b/css/style.scss
@@ -26,11 +26,18 @@ body {
 	border: none;
 	box-shadow: 0 20px 30px 0 $black-color;
 }
+.container {
+	margin-top: 50px;
+}
 
 /* Navigation */
 
 header {
 	background-color: $white-color;
+	position: fixed;
+	width: 100%;
+	overflow: hidden;
+	top: 0;
 	.menu {
 		max-width: 1200px;
 		margin: 0 auto;
@@ -77,7 +84,7 @@ header {
 
 .jumbotron {
 	background-color: $green_color;
-	height: calc(100vh - 50px);
+	height: 100vh;
 	margin: 0 auto;
 	text-align: center;
 	width: 100%;
@@ -115,4 +122,11 @@ header {
 			}
 		}
 	}
+}
+
+/* Technology */
+
+.technology {
+	height: 100vh;
+	background-color: #e6e6e6;
 }
