--- a/css/style.css
+++ b/css/style.css
@@ -103,4 +103,45 @@ header {
   height: 100vh;
   background-color: #e6e6e6; }
 
+/* Game */
+.span-label {
+  height: 50px;
+  width: 100px;
+  margin: 10px 10px;
+  border: 2px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px; }
+
+.rock {
+  color: #FFF;
+  background-color: #000;
+  border: #000; }
+
+.paper {
+  color: #000;
+  background-color: #FFF;
+  border: #FFF; }
+
+.scissors {
+  color: #000;
+  background-color: #14bd4c;
+  border: #14bd4c; }
+
+.game {
+  height: 100vh;
+  background-color: #e6e6e6;
+  margin: 0; }
+  .game > h1 {
+    text-align: center;
+    font-size: 40px;
+    margin: 0;
+    padding-top: 5%; }
+  .game .container-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; }
+
 /*# sourceMappingURL=style.css.map */
