--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,11 @@ body {
 .container {
   margin-top: 50px; }
 
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
 /* Navigation */
 header {
   background-color: #FFF;
@@ -67,10 +72,7 @@ header {
   height: 100vh;
   margin: 0 auto;
   text-align: center;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
+  width: 100%; }
   .jumbotron .particles {
     width: 100%;
     height: 100%;
@@ -78,10 +80,7 @@ header {
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    postition: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
+    postition: relative; }
     .jumbotron .particles .text {
       color: white;
       font-size: 40px;
@@ -105,13 +104,10 @@ header {
 
 /* Game */
 .span-label {
-  height: 50px;
+  height: 40px;
   width: 100px;
-  margin: 10px 10px;
+  margin: 0 10px;
   border: 2px solid;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   border-radius: 10px; }
 
 .rock {
@@ -139,9 +135,6 @@ header {
     margin: 0;
     padding-top: 5%; }
   .game .container-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-wrap: wrap; }
 
 /*# sourceMappingURL=style.css.map */
