--- a/css/style.scss
+++ b/css/style.scss
@@ -29,6 +29,11 @@ body {
 .container {
 	margin-top: 50px;
 }
+.flex-center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
 /* Navigation */
 
@@ -88,9 +93,6 @@ header {
 	margin: 0 auto;
 	text-align: center;
 	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	.particles {
 		width: 100%;
 		height: 100%;
@@ -99,9 +101,6 @@ header {
 		background-position: 50% 50%;
 		background-repeat: no-repeat;
 		postition: relative;
-		display: flex;
-		justify-content: center;
-		align-items: center;
 		.text {
 			color: white;
 			font-size: 40px;
@@ -133,13 +132,10 @@ header {
 
 /* Game */
 .span-label {
-	height: 50px;
+	height: 40px;
 	width: 100px;
-	margin: 10px 10px;
+	margin: 0 10px;
 	border: 2px solid;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	border-radius: 10px;
 }
 .rock {
@@ -168,9 +164,6 @@ header {
 		padding-top: 5%;
 	}
 	.container-title {
-		display: flex;
-		justify-content: center;
-		align-items: center;
 		flex-wrap: wrap;
 	}
 }
