--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ header {
 
 .scissors {
   color: #000;
-  background-color: #14bd4c;
+  background-color: #999999;
   border: #14bd4c; }
 
 .game {
@@ -150,7 +150,7 @@ header {
     background-color: #14bd4c; }
     .game .new-game-container .newGameButton:hover {
       color: #FFF;
-      background-color: #000;
+      background-color: #0d7830;
       transition: .8s;
       box-shadow: none; }
 
