--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,12 @@ body {
   font-size: 25px;
   font-weight: bold;
   border: none;
-  box-shadow: 0 20px 30px 0 #000; }
+  box-shadow: 0 20px 30px 0 #000;
+  cursor: pointer; }
+
+.activeButton:active {
+  vertical-align: top;
+  padding: 8px 13px 6px; }
 
 .container {
   margin-top: 50px; }
@@ -153,6 +158,15 @@ header {
       background-color: #0d7830;
       transition: .8s;
       box-shadow: none; }
+  .game .player-pick-container {
+    flex-wrap: wrap; }
+    .game .player-pick-container .pickButton {
+      margin: 5px 10px; }
+      .game .player-pick-container .pickButton:hover {
+        background-color: #000;
+        color: #FFF;
+        transition: .6s;
+        box-shadow: none; }
 
 footer {
   background-color: #000;
