RPS game completed

--- a/css/style.css
+++ b/css/style.css
@@ -103,9 +103,13 @@ header {
         box-shadow: none; }
 
 /* Technology */
-.technology {
+.skills {
   height: 100vh;
   background-color: #e6e6e6; }
+
+.projects {
+  height: 100vh;
+  background-color: #bdc3c7; }
 
 /* Game */
 .span-label {
@@ -205,7 +209,8 @@ header {
       .game .results .row .playerResult {
         display: flex;
         justify-content: flex-start;
-        flex-grow: 1; }
+        flex-grow: 1;
+        margin: 10px 0; }
       .game .results .row .computerResult {
         display: flex;
         justify-content: flex-end;
