--- a/css/style.css
+++ b/css/style.css
@@ -102,10 +102,34 @@ header {
         transition: .8s;
         box-shadow: none; }
 
-/* Technology section */
+/* Skills section */
+.img-html {
+  background-image: url("../images/HTML5.png"); }
+
+.img-css3 {
+  background-image: url("../images/CSS3.png"); }
+
+.img-js {
+  background-image: url("../images/JS.png"); }
+
 .skills {
   height: 100vh;
   background-color: #e6e6e6; }
+  .skills .flex-row {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto; }
+    .skills .flex-row .gallery {
+      max-width: 100%;
+      display: flex;
+      flex-direction: row; }
+      .skills .flex-row .gallery .image1 img {
+        width: 100%; }
+      .skills .flex-row .gallery .image2 img {
+        width: 100%; }
+      .skills .flex-row .gallery .image3 img {
+        width: 100%; }
 
 /* Projects section */
 .projects {
